Cleanup npm deps

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "igas.github.io",
   "version": "1.0.0",
-  "description": "",
+  "description": "Igas's personal web page",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/igas/igas.github.io.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Igor Kapkov",
+  "license": "CC-BY-4.0",
   "bugs": {
     "url": "https://github.com/igas/igas.github.io/issues"
   },
@@ -25,6 +25,7 @@
     "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
     "gulp-ruby-sass": "0.7.1",
+    "gulp-concat": "2.6.0",
     "gulp-size": "1.2.3"
   }
 }
